# barekit

./: .gitignore  BOOTFILEFORMAT.md  BUILD.md  Cargo.toml  Makefile  README.md  aarch64-unknown-uefi-nofp.json  aarch64-unknown-uefi.json  bl32.patch  extract_text  replace_stub  runon  rust-toolchain.toml  stage_flash  stage_map
.cargo/: config.toml
run_efi/: mkdisk.sh  mount_disk.sh  uboot_env.config  umount_disk.sh  unloop.sh  update_disk.sh
run_efi/tmpmount/: barekit.afx
src/: baremetal_init.s  coff_stager.rs  copy_to_secmem.s  drivers.rs  dt.rs  heap.rs  log.rs  pe.rs  platforms.rs  print.rs  processor.rs  rrt0.rs  rrt1.rs  run.rs  stub.s
src/drivers/: ns16550a.rs  pl011.rs  ttybuffer.rs  ttyefi.rs
